[update] func about swagger, post
